Closed Bug 1611428 Opened 5 years ago Closed 4 years ago

aria-label does not work in input field with VoiceOver

Categories

(Core :: Disability Access APIs, defect, P3)

73 Branch
Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: bchristianson, Assigned: morgan)

References

Details

(Whiteboard: [mac2020_1])

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:73.0) Gecko/20100101 Firefox/73.0

Steps to reproduce:

Overview:
I was following the WAI-ARIA tutorial on MDN, https://developer.mozilla.org/en-US/docs/Learn/Accessibility/WAI-ARIA_basics, and tried the live example at https://mdn.github.io/learning-area/accessibility/aria/website-aria-roles/. I activated macOS's VoiceOver to try it out, but it didn't appear to register any of the ARIA items. None of the Landmarks appeared in the landmark browser, and the aria-label in the search box was not read.

I tried the same using Chrome, and the landmarks and label both worked, so I am sure that this is related to Firefox and not just VoiceOver.

Steps:

  1. Visit https://mdn.github.io/learning-area/accessibility/aria/website-aria-roles/ using Firefox in macOS
  2. Activate VoiceOver
  3. Activate VoiceOver’s Landmarks Menu
  4. Move the VoiceOver cursor to the search input

Environment:
• macOS 10.14.6 Mojave
• Firefox Developer Edition, 73.0b2 64-bit

Actual results:

Steps 1 and 2: Behaved as expected

Step 3: The Landmarks menu was blank

Step 4: The text input was read out by VoiceOver as if it had no ARIA information associated with it.

Expected results:

Step 3: The Landmark menu should have had entries for banner, navigation, main, and complementary

Step 4: VoiceOver should have read out the aria-label, "Search through site content"

Component: Untriaged → Disability Access
OS: Unspecified → macOS
Status: UNCONFIRMED → NEW
Ever confirmed: true

These are two separate bugs. The first one (step 3) is that we don't show anything in the rotor, for anything. The second bug (step 4) is for some reason we don't speak the name of the input field.

It seems like ARIA in general is not working.

I’m new to ARIA, so when these two simple features weren’t working, I didn’t examine further. I probably should have looked at a few more items before blaming the entire feature. But now I’ve gone a little further ahead on the same tutorial. I went to the aria-live example, and that is not working in Firefox, but again, it does in Chrome.

It would be a good idea to verify the extent of the problems with ARIA.

(In reply to bchristianson from comment #2)

It seems like ARIA in general is not working.

Our mac support is lacking and buggy. It has nothing to do specifically with ARIA. ARIA is a very large spec which is not implemented at the platform level.

I’m new to ARIA, so when these two simple features weren’t working, I didn’t examine further. I probably should have looked at a few more items before blaming the entire feature. But now I’ve gone a little further ahead on the same tutorial. I went to the aria-live example, and that is not working in Firefox, but again, it does in Chrome.

Yes, that is bug 1198336.

It would be a good idea to verify the extent of the problems with ARIA.

This bug report is helpful. It would be useful to have separate bugs for each of these issues. I opened a separate bug for the rotor issue. (bug 1613749).

I'm going to narrow this bug to the label issue you mentioned.

aria-label on an input does not work.

STR:

  1. Go to data:text/html,<input aria-label="Name" type="text">
  2. Navigate with VoiceOver to input field.

Result:
VoiceOver says "text".

Expected:
VoiceOver should say "Name, text".

Also of note - it looks like a real DOM label works fine in this case which is very interesting.

data:text/html,<label for="i">Name</label><input id="i" type="text">

Summary: ARIA not detected by VoiceOver on macOS → aria-label does not work in input field with VoiceOver

I'm going to narrow this bug to the label issue you mentioned.

Alright, if that's what works best for what the workflows and current bug-scoping is here, should be fine, then.

Thanks for the feedback.

Note that this is a Mac-specific issue. On Windows, NVDA reads the aria-label just fine.

Whiteboard: [mac2020_1]
See Also: → 809688
Assignee: nobody → mreschenberg

The priority flag is not set for this bug.
:asa, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(asa)
Component: Disability Access → Disability Access APIs
Flags: needinfo?(asa)
Priority: -- → P3
Product: Firefox → Core
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4fc3839bbcde
Add accessibilityLabel function to support aria-label on MacOS. r=eeejay,Jamie
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
QA Whiteboard: [qa-75b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: