Bug 1611428: Add accessibilityLabel function to support aria-label on MacOS. r=eeejay,Jamie

Differential Revision: https://phabricator.services.mozilla.com/D62470